fix: исправление ошибок по ревью